--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul class="navbar">
         <li class="navbar-logo"><a href="#section1">NSUOMNAM</a></li>
         <li class="navbar-nav">
-          <a href="#section2">History</a>
+          <a href="#section2">Usman</a>
           <a href="#section4">Menu</a>
           <a href="#section6">Trim</a>
           <a href="#section7">Map</a>
